Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130122

Windows11 style missing menu indicator for QPushButton menu

    XMLWordPrintable

Details

    • Windows
    • 1347ca99a (dev), 0cb772c6c (6.8)

    Description

      QPushButton is not showing an indicator for a menu it has. Windows and Fusion styles both show the small triangle, with windowsvista style the triangle comes visible on hover. But for windows11 it’s not visible at all.

      This can be reproduced e.g. with the Widgets Gallery example by adding a menu to a push button.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            wladimir.leuschner Wladimir Leuschner
            tiheikka Titta Heikkala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes